<resources>
    <string name="app_name">TheMovieManagerPro</string>
    <string name="welcome">Welcome</string>
    <string name="email_invalid">Email is invalid !</string>
    <string name="enter_mail">Enter an email address !</string>
    <string name="password_contains">The password must contain a capital letter, a special character, and a number !</string>
    <string name="password_length">The password must be at least 6 characters !</string>
    <string name="enter_password">Enter password !</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="add_watchlist">Add Watchlist</string>
    <string name="search">Search</string>
    <string name="watchlist">Watchlist</string>
    <string name="favorites">Favorites</string>
    <string name="details">Details</string>
    <string name="film_backdrop">Film Backdrop</string>
    <string name="overview">Overview:</string>
    <string name="app_icon">App Icon</string>
    <string name="login_wia_email">Login wia Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_wia_website">Login wia Website</string>
    <string name="placeholder">Placeholder</string>
    <string name="vote_average">Vote Average: </string>
    <string name="Popularity">Popularity: </string>
    <string name="release_date">Release Date: </string>
    <string name="more_about">More About </string>
    <string name="vote_count">Vote Count: </string>
    <string name="original_language">Original Language: </string>
    <string name="original_title">Original Title: </string>
    <string name="search_movie">Search a movie...</string>
    <string name="search_empty">Nothing found !</string>
    <string name="favorites_empty">Here is empty. \nAdd a movie to favorites !</string>
    <string name="watchlist_empty">Here is empty. \nAdd a movie to watchlist !</string>
    <string name="added_to_watchlist">Added to watchlist !</string>
    <string name="added_to_favorites">Added to favorites !</string>
    <string name="deleted_from_watchlist">Deleted from watchlist !</string>
    <string name="deleted_from_favorites">Deleted from favorites !</string>
</resources>